--- a/index.html
+++ b/index.html
@@ -9,12 +9,10 @@
 <body>
 <h2>Guess what letter I am thinking of</h2>
 <p>Your Choice: <span id="user-text">none yet</span></p>
-<p>Computer Choice: <span id="computer-text"> </span</p>
 <p>Wins: <span id="wins-text">0</span/p>
 <p>Losses: <span id="losses-text">0</span</p>
-<p>Ties: <span id="ties-text">0</span</p>
-<p>Guesses Left: <span id="guesses-left-text">9</span</p>
-<p>Your Guesses Go Far: <span id="past-guesses-text"> </span</p>
+<p>Guesses Left: <span id="lives-text">9</span</p>
+<p>Your Guesses Go Far: <span id="guesses-text"> </span</p>
 </body>
 <script type = "text/javascript" 
 src= "assets/javascript/game.js"></script>
